# prague_home

./: .gitignore  pyproject.toml
data/: crossfit.csv  crossfit.pkl  nearby_places.txt  school_address.txt  search_urls.txt
scripts/: app.py  gmaps.py  pipeline.py  preprocess.py  score.py  webscraper.py
