[tool.poetry]
name = "env"
version = "0.1.0"
description = "Package to find the best place to live in Prague"
authors = ["mgendia <moutazgendia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.16.1"
ipykernel = "^6.25.1"
selenium = "^4.11.2"
xlml = "^0.1.2"
bs4 = "^0.0.1"
googlemaps = "^4.10.0"
pandas = "^2.0.3"
numpy = "^1.25.2"
lxml = "^4.9.3"
html5lib = "^1.1"
tqdm = "^4.66.1"
webdriver-manager = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
